--- a/Assignment2/app/build.gradle
+++ b/Assignment2/app/build.gradle
@@ -33,4 +33,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     androidTestImplementation 'com.android.support.test:rules:1.0.2'
+
+    implementation 'com.google.android.material:material:1.2.0-alpha04'
 }
