--- a/Assignment3/app/src/main/AndroidManifest.xml
+++ b/Assignment3/app/src/main/AndroidManifest.xml
@@ -12,15 +12,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".BusinessDetailsActivity"></activity>
-        <activity
-            android:name=".MainActivity"
-            android:configChanges="orientation">
+        <activity android:name=".MainActivity" android:configChanges="orientation" />
+        <activity android:name=".CreateAccountActivity" />
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ForgotPasswordActivity" />
     </application>
 
 </manifest>
