Added create activity and added custom action bar in main activity

--- a/ListIt/app/src/main/AndroidManifest.xml
+++ b/ListIt/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     package="com.example.listit">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -11,7 +14,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,6 +24,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ListingDetailsActivity" />
+        <activity android:name=".ListingCreate" />
     </application>
 
 </manifest>
