--- a/ListIt/app/build.gradle
+++ b/ListIt/app/build.gradle
@@ -71,4 +71,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     implementation 'org.mongodb:stitch-android-sdk:4.5.0'
+
+    // Volley
+    implementation 'com.android.volley:volley:1.1.1'
 }
