--- a/ListIt/app/build.gradle
+++ b/ListIt/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
     // ViewModel and LiveData
     // https://developer.android.com/jetpack/androidx/releases/lifecycle
@@ -71,7 +72,4 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     implementation 'org.mongodb:stitch-android-sdk:4.5.0'
-
-    // Volley
-    implementation 'com.android.volley:volley:1.1.1'
 }
