--- a/ListIt/app/src/main/AndroidManifest.xml
+++ b/ListIt/app/src/main/AndroidManifest.xml
@@ -16,15 +16,16 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:configChanges="orientation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ListingDetailsActivity" />
-        <activity android:name=".ListingCreate" />
+        <activity android:name=".ListingDetailsActivity" android:configChanges="orientation" />
+        <activity android:name=".ListingCreate" android:configChanges="orientation"/>
     </application>
 
 </manifest>
